--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
+    <link rel="icon" href="favicon.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Rohit Baghel | Portfolio"
@@ -12,20 +13,6 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://vvhacker007.github.io/portfolio/" />
 
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="60x60" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="72x72" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="76x76" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="114x114" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="120x120" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="144x144" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="152x152" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="180x180" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="192x192" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="32x32" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="96x96" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="16x16" href="/profile_photo_2.jpeg"> -->
-    <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="">
     <meta name="theme-color" content="#000000">
@@ -34,7 +21,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
     <link
       rel="stylesheet"
